--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.8.11",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2"
   }
 }
